--- a/index.html
+++ b/index.html
@@ -17,33 +17,18 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">RS</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Gallery</a>
-            <a class="nav-link" href="#">Prints</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <header>
-      <h1 class="text-center">Rebecca Shuping</h1>
-      <h2 class="text-center">Landscape and Nature Photography</h2>
+    <header id="navbar">
+      <nav class="navbar-container container">
+        <a href="#" class="home-link">
+          <div class="navbar-logo"></div>
+          Rebecca Shuping
+        </a>
+        <button type="button"
+      </nav>
     </header>
+    <section>
+      <h1 class="text-center">Rebecca Shuping</h1>
+    </section>
     <footer></footer>
   </body>
 </html>
